--- a/data/css/style.css
+++ b/data/css/style.css
@@ -9,3 +9,18 @@
   column-gap: 40px;
   column-rule: 1px solid lightblue;
 }
+
+.flex-container {
+  display: flex;
+  flex-wrap: nowrap;
+  background-color: DodgerBlue;
+}
+
+.flex-container > div {
+  background-color: #f1f1f1;
+  width: 100px;
+  margin: 10px;
+  text-align: center;
+  line-height: 75px;
+  font-size: 30px;
+}
