--- a/templates/style.html
+++ b/templates/style.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <title>TechDocs</title>
@@ -94,7 +94,6 @@ body {
 }
     
   </style>
-  
 </head>
 
 <body>
@@ -107,14 +106,15 @@ body {
 <div class="header">
   <h1>My Website</h1>
   <p>With a <b>flexible</b> layout.</p>
-</div>
-
+</div> 
+  
 <!-- Navigation Bar -->
 <div class="navbar">
-  <a href="#">Link</a>
-  <a href="#">Link</a>
-  <a href="#">Link</a>
-  <a href="#">Link</a>
+  <a href="./">Home</a> |
+  <a href="./templates/docs.html/">Docs</a> |
+  <a href="./templates/wiki.html/">Wiki</a> |
+  <a href="./templates/style.html">Style</a> |
+  <a href="./templates/about.html/">About us</a>
 </div>
 
 <!-- The flexible grid (content) -->
@@ -149,10 +149,6 @@ body {
   <div class="footer">
     <h2>Footer</h2>
   </div>
-  
-  <button type="button" onclick="myFunction()">Try it</button>
-  
-  <script src="/data/js/index.js"></script>
   
 </body>
 
