--- a/templates/team.html
+++ b/templates/team.html
@@ -1,8 +1,87 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
+  <title>TechDocs</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  <style>
+  * {
+  box-sizing: border-box;
+  }
+  /* Style the body */
+  body {
+    font-family: Arial;
+    margin: 0;
+  }
+  /* Header/logo Title */
+  .header {
+    padding: 60px;
+    text-align: center;
+    background: #1abc9c;
+    color: white;
+  }
+  /* Style the top navigation bar */
+  .navbar {
+    display: flex;
+    background-color: #333;
+  }
+  /* Style the navigation bar links */
+  .navbar a {
+    color: white;
+    padding: 14px 20px;
+    text-decoration: none;
+    text-align: center;
+  }
+  /* Change color on hover */
+  .navbar a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  /* Column container */
+  .row {  
+    display: flex;
+    flex-wrap: wrap;
+  }
+  /* Create two unequal columns that sits next to each other */
+  /* Sidebar/left column */
+  .side {
+    flex: 30%;
+    background-color: #f1f1f1;
+    padding: 20px;
+  }
+  /* Main column */
+  .main {
+    flex: 70%;
+    background-color: white;
+    padding: 20px;
+  }
+  /* Fake image, just for this example */
+  .fakeimg {
+    background-color: #aaa;
+    width: 100%;
+    padding: 20px;
+  }
+  /* Footer */
+  .footer {
+    padding: 20px;
+    text-align: center;
+    background: #ddd;
+  }
+  /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
+  @media screen and (max-width: 700px) {
+    .row, .navbar {   
+      flex-direction: column;
+    }
+  }
+  .pagination a {
+    color: black;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+  }
+
 html {
   box-sizing: border-box;
 }
@@ -58,10 +137,44 @@ html {
 .button:hover {
   background-color: #555;
 }
-</style>
+  </style>
 </head>
+  
 <body>
+  
+  <!-- Note -->
+<div class="header" style="padding:5px">
+  <h4 style="text-align:center">Resize the browser window to see the responsive effect.</h4>
+</div>
+  
+<!-- Navigation Bar -->
+<div class="navbar">
+  <a href="./">Home</a> |
+  <a href="./templates/docs.html/">Docs</a> |
+  <a href="./templates/wiki.html/">Wiki</a> |
+  <a href="./templates/style.html">Style</a> |
+  <a href="./templates/about.html/">About us</a>
+</div>
+  
+<!-- Header -->
+<div class="header">
+  <h1>My Website</h1>
+  <p>With a <b>flexible</b> layout.</p>
+</div> 
 
+<!-- The flexible grid (content) -->
+<div class="row">
+  <div class="side">
+    <h2>About Me</h2>
+    <h5>Photo of me:</h5>
+    <div class="fakeimg" style="height:200px;">Image</div>
+    <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+    <h3>More Text</h3>
+    <p>Lorem ipsum dolor sit ame.</p>
+    <div class="fakeimg" style="height:60px;">Image</div><br>
+    <div class="fakeimg" style="height:60px;">Image</div><br>
+    <div class="fakeimg" style="height:60px;">Image</div>
+  </div>
 <h2>Responsive "Meet The Team" Section</h2>
 <p>Resize the browser window to see the effect.</p>
 <br>
@@ -107,5 +220,11 @@ html {
   </div>
 </div>
 
+
+  <!-- Footer -->
+  <div class="footer">
+    <h2>Footer</h2>
+  </div>
+  
 </body>
 </html>
