--- a/templates/team.html
+++ b/templates/team.html
@@ -149,10 +149,10 @@ html {
 <!-- Navigation Bar -->
 <div class="navbar">
   <a href="./">Home</a> |
-  <a href="./templates/docs.html/">Docs</a> |
-  <a href="./templates/wiki.html/">Wiki</a> |
+  <a href="./templates/docs.html">Docs</a> |
+  <a href="./templates/wiki.html">Wiki</a> |
   <a href="./templates/style.html">Style</a> |
-  <a href="./templates/about.html/">About us</a>
+  <a href="./templates/about.html">About us</a>
 </div>
   
 <!-- Header -->
