--- a/templates/animation.html
+++ b/templates/animation.html
@@ -210,6 +210,8 @@ button:hover, a:hover {
   </div>
 </div>
   
+https://andyw4ndgerannt.github.io/green_rain/
+  
 <!-- Navigation Bar -->
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -223,7 +225,10 @@ button:hover, a:hover {
 <div id="main">
   <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Navigation</span>
 </div>
-<iframe src="https://andyw4ndgerannt.github.io/P5JS/" title="Geometry animation"></iframe>
+  
+<!-- Animation -->
+<iframe src="https://andyw4ndgerannt.github.io/P5JS/" title="Geometry animation" width="1024" height="768"></iframe>
+  
   <!-- Footer -->
   <div class="footer">
     <footer>
