--- a/templates/animation.html
+++ b/templates/animation.html
@@ -225,7 +225,7 @@ button:hover, a:hover {
 </div>
   
 <!-- Animation -->
-<iframe src="https://andyw4ndgerannt.github.io/P5JS/" title="Geometry animation" width="1024" height="768"></iframe>
+<iframe src="https://andyw4ndgerannt.github.io/P5JS/" title="Geometry animation" width="90%" height="90%"></iframe>
   
   <!-- Footer -->
   <div class="footer">
