--- a/templates/animation.html
+++ b/templates/animation.html
@@ -225,7 +225,7 @@ button:hover, a:hover {
 </div>
   
 <!-- Animation -->
-<iframe src="https://andyw4ndgerannt.github.io/P5JS/" title="Geometry animation" width="1920px" height="1024px"></iframe>
+<iframe src="https://andyw4ndgerannt.github.io/P5JS/" title="Geometry animation" width=70% height=70%></iframe>
   
   <!-- Footer -->
   <div class="footer">
