--- a/templates/style.html
+++ b/templates/style.html
@@ -1,27 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<base href="https://andyw4ndgerannt.github.io/docs/">
 <head>
   <title>TechDocs</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  
+  <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <style>
-  * {
-  box-sizing: border-box;
-  }
-  /* Style the body */
-  body {
-    font-family: Arial;
-    margin: 0;
-  }
-  /* Header/logo Title */
-  .header {
-    padding: 60px;
-    text-align: center;
-    background: #1abc9c;
-    color: white;
-  }
+* {box-sizing: border-box;}
+
+body { 
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.header {
+  overflow: hidden;
+  background-color: #f1f1f1;
+  padding: 20px 10px;
+}
+
+.header a {
+  float: left;
+  color: black;
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px; 
+  line-height: 25px;
+  border-radius: 4px;
+}
+
+.header a.logo {
+  font-size: 25px;
+  font-weight: bold;
+}
+
+.header a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.header a.active {
+  background-color: dodgerblue;
+  color: white;
+}
+
+.header-right {
+  float: right;
+}
   /* Style the top navigation bar */
   .navbar {
     display: flex;
@@ -63,11 +91,19 @@
     width: 100%;
     padding: 20px;
   }
+  /* Card Image */
+  .cardimg {
+    background-color: #aaa;
+    width: 100%;
+    padding: 20px;
+  }
   /* Footer */
   .footer {
-    padding: 20px;
     text-align: center;
-    background: #ddd;
+    felx: 70%;
+    background-color: DarkSalmon;
+    color: white;
+    padding: 20px;
   }
   /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
   @media screen and (max-width: 700px) {
@@ -81,63 +117,183 @@
     padding: 8px 16px;
     text-decoration: none;
   }
+  .sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+#main {
+  transition: margin-left .5s;
+  padding: 16px;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 300px;
+  margin: auto;
+  text-align: center;
+  font-family: arial;
+}
+
+.title {
+  color: grey;
+  font-size: 18px;
+}
+
+button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+}
+
+a {
+  text-decoration: none;
+  font-size: 22px;
+  color: black;
+}
+
+button:hover, a:hover {
+  opacity: 0.7;
+}
   </style>
 </head>
   
 <body>
   
-  <!-- Note -->
-<div class="header" style="padding:5px">
-  <h4 style="text-align:center">Resize the browser window to see the responsive effect.</h4>
+<!-- Header --> 
+<div class="header">
+  <a href="https://andyw4ndgerannt.github.io/docs/" class="logo">CompanyLogo</a>
+  <div class="header-right">
+    <a class="active" href="https://andyw4ndgerannt.github.io/docs/">Home</a>
+    <a href="https://andyw4ndgerannt.github.io/docs/templates/contact.html">Contact</a>
+    <a href="https://andyw4ndgerannt.github.io/docs/templates/about.html">About</a>
+  </div>
 </div>
   
 <!-- Navigation Bar -->
-<div class="navbar">
-  <a href="./">Home</a> |
-  <a href="./templates/docs.html/">Docs</a> |
-  <a href="./templates/wiki.html/">Wiki</a> |
-  <a href="./templates/style.html">Style</a> |
-  <a href="./templates/about.html/">About us</a>
+<div id="mySidenav" class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <a href="../">Home</a> |
+  <a href="./templates/team.html">Team</a> |
+  <a href="./templates/products.html">Products</a> |
+  <a href="./templates/animation.html">Animation</a> |
+  <a href="./templates/wiki.html">Wiki</a> |
+  <a href="./templates/style.html">Fraktale</a> |
+  <a href="./templates/about.html">About us</a>
 </div>
+<div id="main">
+  <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Navigation</span>
+</div>
+
   
-<!-- Header -->
-<div class="header">
-  <h1>My Website</h1>
-  <p>With a <b>flexible</b> layout.</p>
-</div> 
+
 
 <!-- The flexible grid (content) -->
 <div class="row">
   <div class="side">
-    <h2>About Me</h2>
-    <h5>Photo of me:</h5>
-    <div class="fakeimg" style="height:200px;">Image</div>
-    <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-    <h3>More Text</h3>
-    <p>Lorem ipsum dolor sit ame.</p>
-    <div class="fakeimg" style="height:60px;">Image</div><br>
-    <div class="fakeimg" style="height:60px;">Image</div><br>
-    <div class="fakeimg" style="height:60px;">Image</div>
-  </div>
+    <h2 style="text-align:center">About me</h2>
+    <div class="card">
+      <div class="cardimg">
+        <img src="./images/me.png" alt="Andy" style="width:100%">
+      </div>  
+      <h1>Andy Ge</h1>
+      <p class="title">CEO & Founder, Developer, Artist</p>
+      <p>Fantasy University</p>
+        <div style="margin: 24px 0;">
+         <a href="#"><i class="fa fa-dribbble"></i></a> 
+         <a href="#"><i class="fa fa-twitter"></i></a>  
+         <a href="#"><i class="fa fa-linkedin"></i></a>  
+         <a href="https://www.facebook.com/MKCreativeHomeDesign"><i class="fa fa-facebook"></i></a> 
+       </div>
+        <p><button>Contact</button></p>
+     </div>
+    </div>
   <div class="main">
-    <h2>TITLE HEADING</h2>
-    <h5>Title description, Dec 7, 2017</h5>
-    <div class="fakeimg" style="height:200px;">Image</div>
-    <p>Some text..</p>
-    <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+    <h2>Fraktal 1</h2>
+    <div>
+      <video controls autoplay>
+        <source src="../vids/video1.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video> 
+    </div>
     <br>
-    <h2>TITLE HEADING</h2>
-    <h5>Title description, Sep 2, 2017</h5>
-    <div class="fakeimg" style="height:200px;">Image</div>
-    <p>Some text..</p>
-    <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+    <h2>Fraktal 2</h2>
+    <div>
+      <video controls autoplay>
+        <source src="../vids/new_vid.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video> 
+    </div>
+    <h2>Fraktal 3</h2>
+    <div>
+      <video controls autoplay>
+        <source src="../vids/multi_scene.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video> 
+    </div>
   </div>
 </div>
 
   <!-- Footer -->
   <div class="footer">
-    <h2>Footer</h2>
+    <footer>
+      <p>Author: Andreas Gerlich<br>
+      <a href="mailto:gerlich96@gmx.de">gerlich96@gmx.de</a></p>
+    </footer>
   </div>
+
+<script>
+function openNav() {
+  document.getElementById("mySidenav").style.width = "250px";
+  document.getElementById("main").style.marginLeft = "250px";
+}
+
+function closeNav() {
+  document.getElementById("mySidenav").style.width = "0";
+  document.getElementById("main").style.marginLeft= "0";
+}
+</script>
   
 </body>
 </html>
+
