--- a/templates/style.html
+++ b/templates/style.html
@@ -251,8 +251,8 @@ button:hover, a:hover {
   <div class="main">
     <h2>Fraktal 1</h2>
     <div>
-      <video controls autoplay>
-        <source src="../vids/video1.mp4" type="video/mp4">
+      <video width="400" height="200" controls autoplay>
+        <source src="https://github.com/AndyW4ndgerannt/docs/blob/main/vids/video1.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video> 
     </div>
