--- a/templates/style.html
+++ b/templates/style.html
@@ -260,7 +260,7 @@ button:hover, a:hover {
     <h2>Fraktal 2</h2>
     <div>
       <video controls autoplay>
-        <source src="../vids/new_vid.mp4" type="video/mp4">
+        <source src="https://drive.google.com/file/d/1ENNP55d9uoQSoHu_UHeJt-leU3MGj98I/view?usp=share_link" type="video/mp4">
         Your browser does not support the video tag.
       </video> 
     </div>
