--- a/templates/style.html
+++ b/templates/style.html
@@ -259,7 +259,7 @@ button:hover, a:hover {
     <br>
     <h2>Fraktal 2</h2>
     <div>
-      <video controls autoplay>
+      <video width="400" height="200" controls autoplay>
         <source src="https://drive.google.com/file/d/1ENNP55d9uoQSoHu_UHeJt-leU3MGj98I/view?usp=share_link" type="video/mp4">
         Your browser does not support the video tag.
       </video> 
